# Authentic-Execution

./: Dockerfile  Makefile  README.md  manifest.xml  run.py  soc_term.c
.github/workflows/: ci.yml
Event/: CMakeLists.txt
Event Manager on optee/: CMakeLists.txt
Event Manager on optee/host/: addr.h  command_handlers.c  command_handlers.h  connection.c  connection.h  enclave_utils.c  enclave_utils.h  event_manager.c  event_manager.h  main.c  networking.c  utils.c  utils.h
Event/host/: command_handlers.c  command_handlers.h  connection.h  enclave_utils.c  enclave_utils.h  event_manager.c  event_manager.h  main.c  networking.c  networking.h  uuid.c  uuid.h
button_driver/: authentic_execution.c  button_driver.c  sub.mk  user_ta_header_defines.h
button_driver/include/: authentic_execution.h  button_driver.h
chat/: CMakeLists.txt
chat/host/: Makefile  main.c
chat/ta/: Makefile  chat.c  sub.mk  user_ta_header_defines.h
chat/ta/include/: chat.h
reactive-tools/: cli.py  result.json  test.json
reactive-tools/examples/trustzone/ta1/: .ta.ld.d  .ta1.o.cmd  .ta1.o.d  .ta_entry_a32.o.cmd  .user_ta_header.o.d  8aaaf200-2450-11e4-abe2-0002a5d5c51b.dmp  8aaaf200-2450-11e4-abe2-0002a5d5c51b.elf  8aaaf200-2450-11e4-abe2-0002a5d5c51b.map  8aaaf200-2450-11e4-abe2-0002a5d5c51b.ta  sub.mk  ta1.c  (+5 more)
reactive-tools/reactivetools/: config.py  connection.py  periodic_event.py  tools.py
reactive-tools/reactivetools/modules/: base.py  sancus.py  sgx.py  trustzone.py
reactive-tools/reactivetools/nodes/: base.py  sancus.py  sgx.py  sgxbase.py  trustzone.py
(+16 files in other folders)
